Revision history for Getopt-Euclid

git
  - Bugfix for #29301: now looking for POD located into .pod files
  - Little internal modification to prevent identical placeholders that are
    present multiple times in the specification to be processed multiple times.
  - Bugfix 69105: file META.yml now states which license the module uses
  - Added dependency Text::Balanced in README and Makefile.PL
  - Bugfix for #34200: variables in constraint specifications are now read as
    originating from the 'main' package namespace
  - Error messages for arguments that do not validate against the constraints
    now display the value of variables instead of their name.

0.2.4
  - Default values can now be specified in the POD and displayed in the program
    documentation
  - Support for more integer arguments, e.g. scientific notation like 1E8
  - Support for arguments that cannot coexist using the 'exclude' keyword
  - New specifier to defer processing of @ARGV arguments: :defer
  - New method to pass an arbitrary array of arguments to parsing: process_args
  - New methods to access the program usage, version, manual and help messages
  - When a version number is missing from the POD or $main::VERSION, the file
    time and date are used as version number
  - The help message now includes --version and is more consistent with the
    usage message
  - Bugfix: the options in the help message are no longer randomly sorted
  - Bugfix: the man page is now properly formed when .pm files that have no POD
    are use'd
  - Bugfix: when the --man flag was passed and the script name was, e.g. 'myprog'
    instead of 'myprog - short description', an undef warning was issued
  - Bugfix: when the --help flag was passed and either no required arguments or
    no optional arguments were specified in the POD, an undef warning was issued
  - Bugfix: the POD parsing mechanism now removes rogue PODs hidden inside
    variables and other Perl-quoted strings