@@ -116,7 +116,6 @@ This module is free software. It may be used, redistributed
 and/or modified under the terms of the Perl Artistic License
   (see http://www.perl.com/perl/misc/Artistic.html)
 
-=cut
 
 =head1 REQUIRED ARGUMENTS
 
@@ -131,6 +130,7 @@ Specify input file
 Specify output file
 
 =back
+
 
 
 ';
