@@ -1,7 +1,8 @@
 Revision history for Getopt-Euclid
 
 git
-  - Bugfix for #29301: now looking for POD located into .pod files
+  - Bugfix for #69324: More efficient and accurate POD extraction using Perl::Tidy
+  - Bugfix for #29301: looking for POD located into .pod files
   - Little internal modification to prevent identical placeholders that are
     present multiple times in the specification to be processed multiple times.
   - Bugfix 69105: file META.yml now states which license the module uses
